--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="memo.html">memo</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
