--- a/memo.html
+++ b/memo.html
@@ -25,11 +25,11 @@
           <a class="nav-link" href="Make.html">Make</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="Daily.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Daily report
+          <a class="nav-link dropdown-toggle" href="Milestone.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Milestone
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Dayly2020.html">2020</a>
+            <a class="dropdown-item" href="milestone2020.html">2020</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
