--- a/milestone2020.html
+++ b/milestone2020.html
@@ -25,11 +25,11 @@
           <a class="nav-link" href="Make.html">Make</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="Daily.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Daily report
+          <a class="nav-link dropdown-toggle" href="Milestone.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Milestone
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Dayly2020.html">2020</a>
+            <a class="dropdown-item" href="milestone2020.html">2020</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
@@ -43,8 +43,12 @@
       </form>
     </div>
   </nav>
-  <h1>Daily report 2020</h1>
-  
+  <h1>milestone 2020</h1>
+  <ul>
+  <li><a href="https://www.shoubo-shiken.or.jp/shoubou/kind.html">消防設備士甲種１，４類</a></li>
+  <li><a href="https://www.shiken.or.jp/examination/e-construction01.html">第一種電気工事士</a></li>
+  </ul>
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
