--- a/Make.html
+++ b/Make.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ja">
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -25,11 +25,11 @@
           <a class="nav-link" href="Make.html">Make</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="Daily.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Daily report
+          <a class="nav-link dropdown-toggle" href="Milestone.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Milestone
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="Dayly2020.html">2020</a>
+            <a class="dropdown-item" href="milestone2020.html">2020</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
@@ -43,8 +43,44 @@
       </form>
     </div>
   </nav>
-  <h1>Works</h1>
-  
+  <div class="container">
+    <h2 id="make">Make</h2>
+
+    <div class="card-columns">
+      <div class="card">
+        <img class="card-img-top" src="images/RaspiCam.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">カメラケース</h5>
+          <p class="card-text">ラズベリーパイのカメラケースを3Dプリンタで出力してもらったもの。黒色でおしゃれ。</p>
+          <a href="#" class="btn btn-primary">More</a>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="images/VPN.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">VPNServer</h5>
+          <p class="card-text">Softether使ってVPNサーバーをラズベリーパイに立てた話。マンションなのでグローバルIPが無かったが先人がいたおかげでわりとすぐできた。</p>
+          <a href="#" class="btn btn-primary">More</a>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="images/SmartCushion1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">スマートクッション</h5>
+          <p class="card-text">腰痛対策に試作したもの。圧力センサで座りすぎと前傾姿勢の防止。温度とかも取得しているのでgrafanaとの連携が次の目標</p>
+          <a href="#" class="btn btn-primary">More</a>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="images/cake1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">cake</h5>
+          <p class="card-text">東京行ったときのアイスケーキ。もはやMakeですらない</p>
+          <a href="#" class="btn btn-primary">More</a>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
