--- a/milestone2020.html
+++ b/milestone2020.html
@@ -45,39 +45,9 @@
   </nav>
   <h1>milestone 2020</h1>
   <ul>
-  <li><a href="https://www.shoubo-shiken.or.jp/shoubou/kind.html">消防設備士甲種１，４類⇒did it!</a></li>
-  <li><a href="https://www.shiken.or.jp/examination/e-construction01.html">第一種電気工事士⇒didn't do it</a></li>
+  <li><a href="https://www.shoubo-shiken.or.jp/shoubou/kind.html">消防設備士甲種１，４類</a></li>
+  <li><a href="https://www.shiken.or.jp/examination/e-construction01.html">第一種電気工事士</a></li>
   </ul>
-
-  <h1>milestone 2022</h1>
-  <ul>
-  <li><a href="https://www.shiken.or.jp/examination/e-chief02.html">アレの２種⇒コロナ感染</a></li>
-  </ul>
-
-  <h1>milestone 2023</h1>
-  <ul>
-  <li><a href="https://www.shiken.or.jp/examination/e-chief02.html">アレの２種⇒未受験</a></li>  
-  <li><a href="https://www.bing.com/search?pglt=161&q=六〇ゲート池袋&cvid=5ccd103e6269436ab23b6c7390a1f5ca&aqs=edge.1.69i57j0.6697j0j1&FORM=ANNTA1&PC=U531">池袋の現場竣工</a></li>
-
-　</ul>
-
-
-  <h1>milestone 2024</h1>
-  <ul>
-  <li><a href="https://www.shiken.or.jp/examination/e-chief02.html">アレの２種</a></li>
-  </ul>
-
-  <h1>milestone 2025</h1>
-  <ul>
-  <li><a href="https://www.shiken.or.jp/examination/e-chief01.html">アレの１種</a></li>
-  </ul>
-
-  <h1>milestone 2026</h1>
-  <ul>
-  <li><a href="">考え中</a></li>
-  </ul>
-
-
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
