--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="milestone2020.html">2020</a>
+            <a class="dropdown-item" href="milestone2024.html">2024</a>
             <div class="dropdown-divider"></div>
           </div>
         </li>
